# hoover4

./: .gitignore  .gitmodules  Readme.md  gen-context.config.json
ai_services/hoover4_ai_clients/: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
ai_services/hoover4_ai_clients/hoover4_ai_clients/: __init__.py  data_models.py  embeddings_client.py  milvus_client.py  ner_client.py  reranker_client.py
ai_services/hoover4_ai_clients/tests/: README.md  conftest.py  test_embeddings_integration.py  test_milvus_integration.py  test_ner_integration.py  test_reranker_integration.py  test_throughput_batch_operations.py
ai_services/hoover4_ai_server/: Dockerfile  README.md  env.example  hoover4_ai_server.py  pyproject.toml  requirements.txt
ai_services/hoover4_ai_server/tests/: test_batch_optimization.py  test_embeddings.py  test_health.py  test_ner.py  test_reranking.py  test_throughput.py  test_utils.py
ai_services/hoover4_mcp/ddg_search_server/: Dockerfile  env.example  pyproject.toml  test_client.py
ai_services/hoover4_mcp/ddg_search_server/ddg_server/: __init__.py  server.py
ai_services/hoover4_mcp/milvus_search_server/: Dockerfile  env.example  poetry.toml  pyproject.toml  test_client.py
ai_services/hoover4_mcp/milvus_search_server/milvus_server/: __init__.py  server.py
ai_services/hoover4_mcp/whois_search_server/: Dockerfile  env.example  poetry.toml  pyproject.toml  test_client.py
ai_services/hoover4_mcp/whois_search_server/whois_server/: __init__.py  server.py
ai_services/hoover4_rag/: README.md  env.example  pyproject.toml
ai_services/hoover4_rag/hoover4_rag/: __init__.py  text_content_iterator.py
ai_services/hoover4_rag/hoover4_rag/chains/: __init__.py  rag.py
ai_services/hoover4_rag/hoover4_rag/scripts/: __init__.py  ingest.py  rag_cli.py
ai_services/hoover4_rag/tests/: test_text_content_iterator.py
ai_services/hoover4_research_agent/: Dockerfile  README.md  env.example  main.py  pyproject.toml
ai_services/hoover4_research_agent/research_agent/: __init__.py  agent.py  api.py  chat_model.py
ai_services/hoover4_research_agent/tests/: test_agent.py  test_api.py
main_services/processing/: .env  .gitignore  Dockerfile  Readme.md  main.py  pyproject.toml
main_services/processing/database/: Readme.md  clickhouse.py  manticore.py  milvus_example.py  minio.py
main_services/processing/database/clickhouse_migrations/: 00001_dataset.sql  00002_blobs.sql  00003_blob_values.sql  00004_file_types.sql  00005_vfs_directories.sql  00006_vfs_files.sql  00007_archives.sql  00009_emails.sql  00010_email_headers.sql  00011_pdfs.sql  00012_pdfs_image.sql  00013_image.sql  00014_raw_ocr_results.sql  00015_text_content.sql  00016_entity_hit_create.sql  00019_processing_errors.sql  00020_tika_metadata.sql  00021_processing_plans.sql  00022_processing_plan_hits.sql  00023_processing_plan_finished.sql  00024_pdf_metadata.sql  00025_audio_metadata.sql  00026_video_metadata.sql  00027_text_chunks_milvus.sql  00028_entity_hits_milvus.sql  00030_temp_json_objects.sql  00031_string_term_ids.sql  00032_search_manticore_cache.sql  00033_search_manticore_cache_add_duration.sql  00034_pdf_to_html_cache.sql  00035_pdf_to_html_cache_alter_add_sizes.sql  00036_users.sql  00037_user_groups.sql  00038_user_group_membership.sql  00039_collections.sql  00040_collection_datasets.sql  00041_collection_group_permissions.sql  00042_web_sessions.sql  00043_server_settings.sql  00044_dataset_add_is_deleted.sql
main_services/processing/tasks/: Readme.md  run_worker.py
main_services/processing/tasks/P0_scan_disk/: Readme.md  activities.py  mime_type_mapper.py  submit_job.py  workflows.py
main_services/processing/tasks/P1_compute_plans/: Readme.md  activities.py  submit_job.py  workflows.py
main_services/processing/tasks/P2_execute_plan/: Readme.md  activities.py  submit_job.py  workflows.py
main_services/processing/tasks/P3_parse_files/: Readme.md  parse_archives.py  parse_audio.py  parse_common.py  parse_email.py  parse_image.py  parse_mime.py  parse_ocr.py  parse_ocr_models.py  parse_pdf.py  parse_text.py  parse_tika.py  parse_video.py  temp_dirs.py  workflows.py
main_services/processing/tasks/P4_index_data/: Readme.md  activities.py  extract_ner_from_text.py  params.py  string_term_encodings.py  workflows.py
website/: .env.development.example  .gitignore  Cargo.toml  Dockerfile  Readme.md  development.sh
website/backend/: Cargo.toml
website/backend/pdf-viewer/_server/: run-server.sh  server-search.js
website/backend/src/: lib.rs
website/backend/src/api/: list_datasets.rs  mod.rs
website/backend/src/api/admin/: collections.rs  datasets.rs  groups.rs  mod.rs  settings.rs  users.rs  (+1 more)
website/backend/src/auth/: guard.rs  mod.rs  permissions.rs  session_middleware.rs
website/backend/src/db_auth/: collections.rs  groups.rs  mod.rs  sessions.rs  settings.rs  users.rs
website/backend/src/db_utils/: clickhouse_utils.rs  decompose_spans.rs  manticore_utils.rs  mod.rs
website/backend/src/server_extra/: download_document.rs  mod.rs  run_pdf_search_server.rs
website/common/: Cargo.toml
website/common/src/: admin_types.rs  current_user.rs  document_entities.rs  document_metadata.rs  document_sources.rs  document_text_sources.rs  lib.rs  pdf_search_results.rs  pdf_to_html_conversion.rs  search_const.rs  search_query.rs  search_result.rs  text_highlight.rs  vfs.rs
website/frontend/: Cargo.toml  README.md  prompt-small.md
website/frontend/assets/: dx-components-theme.css  main.css
website/frontend/assets/embed-pdf/: embed-demo.js  embed-pdf.js  server-copy-dist.sh
website/frontend/src/: app.rs  lib.rs  main.rs  routes.rs
website/frontend/src/api/: admin_api.rs  auth_api.rs  error_util.rs  mod.rs  search_api.rs  server_auth.rs
website/frontend/src/components/: error_boundary.rs  mod.rs  navbar.rs  suspend_boundary.rs
website/frontend/src/data_definitions/: doc_viewer_state.rs  mod.rs  url_param.rs
website/frontend/src/pages/: chatbot_page.rs  file_browser_page.rs  home_page.rs  mod.rs  pdfdemo_page.rs  search_page.rs  view_document_page.rs
(+98 files in other folders)
