[workspace]
members = ["common", "backend", "frontend"]
resolver = "3"

[workspace.package]
version = "0.1.0"
authors = ["Liquid Investigations"]
edition = "2024"


[profile.dev]
opt-level = 1
debug = false

[profile.desktop-dev]
opt-level = 1
debug = true
inherits = "dev"

[profile.desktop-dev.package."*"]
opt-level = 3
debug = true

[profile.dev.package."*"]
opt-level = 3
debug = false

[profile.dev.build-override]
opt-level = 3
codegen-units = 16
debug = false # when possible

[profile.release]
opt-level = "z"
lto = "fat"
debug = 0
strip = true
codegen-units = 1

[profile.wasm-dev]
inherits = "dev"
opt-level = 1
debug = false

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
