[workspace]
members = ["common", "backend", "frontend"]
resolver = "3"

[workspace.package]
version = "0.1.0"
authors = ["Liquid Investigations"]
edition = "2024"


[profile.dev]
opt-level = 1
debug = false

[profile.desktop-dev]
opt-level = 1
debug = true
inherits = "dev"

[profile.desktop-dev.package."*"]
opt-level = 3
debug = true

[profile.dev.package."*"]
opt-level = 3
debug = false

[profile.dev.build-override]
opt-level = 3
codegen-units = 16
debug = false # when possible

[profile.release]
opt-level = "z"
lto = "fat"
debug = 0
strip = true
codegen-units = 1

[profile.wasm-dev]
inherits = "dev"
opt-level = 1
debug = false

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"


[workspace.lints.rust]
unsafe_code = "deny"
# missing_docs = "deny"


[workspace.lints.clippy]
redundant_field_names = "allow"
redundant_closure = "allow"
match_like_matches_macro = "allow"
clone_on_copy = "allow"
needless_return = "allow"
question_mark = "allow"
neg_multiply = "allow"
collapsible_if = "allow"
useless_conversion = "allow"
map_identity = "allow"
op_ref = "allow"
arc_with_non_send_sync = "allow"
enum_variant_names = "allow"
legacy_numeric_constants = "allow"
ptr_arg = "allow"