[tool.poetry]
name = "hoover4_ai_server"
version = "1.0.0"
description = "FastAPI-based embedding server using multilingual-e5-large-instruct model"
authors = ["Your Name <your.email@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
torch = {source = "pytorch-gpu"}
torchvision = {source = "pytorch-gpu"}
torchaudio = {source = "pytorch-gpu"}
sentence-transformers = "^2.2.0"
fastapi = "^0.100.0"
uvicorn = {extras = ["standard"], version = "^0.20.0"}
numpy = "^1.24.0"
pydantic = "^2.0.0"
tiktoken = ">=0.7,<1"
tokenizers = "0.22.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[[tool.poetry.source]]
name = "pytorch-gpu"
url = "https://download.pytorch.org/whl/cu126"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

