[project]
name = "processing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.3.1",
    "clickhouse-connect>=0.10.0",
    "clickhouse-migrations>=0.8.1",
    # "easyocr>=1.7.2",
    "easyocr>=1.7.2",
    "extractous>=0.3.0",
    "magika>=0.6.2",
    "minio>=7.2.16",
    # "mypy>=1.17.1",
    "mysql-connector-python>=9.5.0",
    "numpy>=2.2.6",
    # "openai>=1.108.1",
    # "pandas>=2.3.0",
    # "pandas-stubs>=2.3.2.250827",
    "pyarrow>=21.0.0",
    # "pymilvus>=2.6.1",
    "temporalio>=1.16.0",
    "tika>=3.1.0",
    "torch>=2.6.0",
    "torchvision==0.21",
    "types-python-dateutil>=2.9.0.20250822",
    "types-pytz>=2025.2.0.20250809",
    "types-requests>=2.32.4.20250809",
    "types-ujson>=5.10.0.20250822",
]

[tool.uv.sources]
    torch       = [{ index = "pytorch-cpu" }]
    torchvision = [{ index = "pytorch-cpu" }]

[[tool.uv.index]]
    name     = "pytorch-cpu"
    url      = "https://download.pytorch.org/whl/cpu"
    explicit = true
