[package]
name = "backend"
edition = "2024"


[dependencies]
tokio = { version = "1.39.0", features = ["full"] }
tokio-util = "0.7.10"
anyhow = "1"
common = { path = "../common" }
format-sql-query = "0.4.0"
reqwest = "0.12.24"
serde_json = "1"
serde = "1"
clickhouse = "0.14.0"
sha256 = "1.6.0"
axum = "0.8.6"
tracing = "0.1"