[package]
name = "backend"
edition = "2024"


[dependencies]
tokio = { version = "1.39.0", features = ["full"] }
futures = "0.3.31"
bytes = "1.10.1"
tokio-util = "0.7.10"
anyhow = "1"
common = { path = "../common" }
format-sql-query = "0.4.0"
reqwest = { version = "0.12.24", features = ["json"] }
serde_json = "1"
serde = "1"
clickhouse = { version = "0.14.2", features = ["time"] }
time = "0.3"
rand = "0.9"
axum-extra = { version = "0.10", features = ["cookie"] }
sha256 = "1.6.0"
axum = "0.8.6"
tracing = "0.1"
minio = "0.3.0"
serde_bytes="0.11"



[lints]
workspace = true